# Intro-AI

./: CMakeLists.txt  GeneticAlgorithm.cpp  Neural.cpp  README.md
Genetic Algorithm/: Crossover.cpp
Header/: Activation.hpp  GeneticAlgorithm.hpp  Genome.hpp
dependencies/: CMakeLists.txt
src/: Activation.hpp  BoardRenderer.hpp  GUI.cpp  GUI.hpp  GameRenderer.cpp  GeneticAlgorithm.cpp  GeneticAlgorithm.hpp  NetworkRenderer.hpp  Neural.cpp  Neural.hpp  Population.cpp  Population.hpp  README.md  RNG.hpp  Serializer.cpp  Serializer.hpp  SnakeEngine.cpp  SnakeEngine.hpp  config.hpp  main.cpp  tempCodeRunnerFile.hpp
